--- a/src/pages/auth/auth.css
+++ b/src/pages/auth/auth.css
@@ -49,3 +49,9 @@
     margin-top: 1rem; /* Add margin above the submit button */
     text-align: center; /* Center the submit button */
 }
+
+.admin-form {
+  width: 450px;
+  margin: auto;
+  margin-top: 3rem;
+}
